--- a/Buoi3/Python_List_Tuple_Set_String_Examples.ipynb
+++ b/Buoi3/Python_List_Tuple_Set_String_Examples.ipynb
@@ -41,14 +41,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['apple', 'banana', 'cherry']\n"
+      "['apple', 'banana', 'cherry', 'banana']\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# Tạo list cơ bản\n",
-    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "fruits = [\"apple\", \"banana\", \"cherry\",\"banana\"]\n",
     "print(fruits)\n"
    ]
   },
@@ -70,10 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "efaf064b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry', 'banana', 'orange']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits.append('orange'); print(fruits)"
    ]
@@ -88,12 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "453d05f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'grape', 'banana', 'cherry', 'banana', 'orange']\n"
+     ]
+    }
+   ],
    "source": [
-    "fruits.insert(1, 'grape'); print(fruits)"
+    "fruits.insert(1, 'grape'); \n",
+    "print(fruits)"
    ]
   },
   {
@@ -106,10 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cb491e3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'grape', 'cherry', 'banana', 'orange']\n"
+     ]
+    }
+   ],
    "source": [
     "fruits.remove('banana'); print(fruits)"
    ]
@@ -124,12 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "22d54f30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed: apple\n",
+      "['grape', 'cherry', 'banana', 'orange']\n"
+     ]
+    }
+   ],
    "source": [
-    "removed = fruits.pop(0); print('Removed:', removed); print(fruits)"
+    "pop2 = fruits.pop(0); \n",
+    "print('Removed:', pop2); print(fruits)"
    ]
   },
   {
@@ -142,10 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c81f0868",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [1,2,3]; nums.clear(); print(nums)"
    ]
@@ -160,10 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ae6a7925",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [10,20,30,20]; print(nums.index(20))"
    ]
@@ -178,10 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "67f63dfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [1,1,2,3,1]; print(nums.count(1))"
    ]
@@ -196,12 +255,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c3b7a899",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97 99 67\n",
+      "['quyen', 'aoang', 'Cuong']\n"
+     ]
+    }
+   ],
    "source": [
-    "nums = [3,1,4,2]; nums.sort(); print(nums)"
+    "nums = [\"quyen\",\"Cuong\",\"aoang\"]; nums.sort(reverse = True)\n",
+    "a = ord(\"a\")\n",
+    "b = ord(\"c\")\n",
+    "k = ord(\"C\")\n",
+    "print(a, b,k)\n",
+    "\n",
+    "print(nums)"
    ]
   },
   {
@@ -214,10 +288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "47f43d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [1,2,3]; nums.reverse(); print(nums)"
    ]
@@ -232,12 +314,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5f5807a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2] [1, 2, 3]\n",
+      "130625350094272 130625350098240\n"
+     ]
+    }
+   ],
    "source": [
-    "a = [1,2]; b = a.copy(); b.append(3); print(a,b)"
+    "a = [1,2]; b = a.copy(); b.append(3); print(a,b)\n",
+    "print(id(a),id(b))"
    ]
   },
   {
@@ -250,15 +342,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ab3769d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# List comprehension tạo danh sách bình phương số chẵn\n",
-    "squares = [x*x for x in range(10) if x%2==0]\n",
-    "print(squares)\n"
+    "# squares = [x*x for x in range(10) if x%2==0]\n",
+    "j = []\n",
+    "for x in range(10):\n",
+    "    if x%2==0:\n",
+    "        x= x*x\n",
+    "        j.append(x)\n",
+    "# print(squares)\n",
+    "print(j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c520a597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5] [1, 2, 3, 4, 5]\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1,2,3,4,5]\n",
+    "list2 = list1[0:7:]\n",
+    "# Slicing list[start:end:step]\n",
+    "print(list1,list2)\n",
+    "#duyet list bang chi so am\n",
+    "for i in range(-1,-len(list1)-1,-1):\n",
+    "    print(list1[i])"
    ]
   },
   {
@@ -296,12 +431,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "cc554702",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m list3 = []\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m     diemso = \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mnhap diem :\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m diemso <\u001b[32m0\u001b[39m:\n\u001b[32m     15\u001b[39m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
+      "\u001b[31mValueError\u001b[39m: could not convert string to float: ''"
+     ]
+    }
+   ],
    "source": [
-    "#lam bai tap vao day"
+    "#lam bai tap vao day\n",
+    "# listX = []\n",
+    "# while True:\n",
+    "#     try:\n",
+    "#         x = int(input(\"nhap vao gia tri\"))\n",
+    "#         if x == True:\n",
+    "#             listX.append(x)\n",
+    "#     except:\n",
+    "#         if x == \"\":\n",
+    "#             return listX\n",
+    "list3 = []\n",
+    "while True:\n",
+    "    diemso = float(input(\"nhap diem :\"))\n",
+    "    if diemso <0:\n",
+    "        continue\n",
+    "    elif diemso > 10:\n",
+    "        break\n",
+    "    else :\n",
+    "        list3.append(diemso)\n",
+    "list_diem = [i for i in list3 if i >= 5]\n",
+    "list_diem.sort(reverse=False)\n",
+    "min1 = list_diem[0]\n",
+    "max3 = list_diem[len(list_diem)-1]\n",
+    "print(list_diem)\n",
+    "print(f\"diem thap nhat la : {min1}\")\n",
+    "print(f\"diem cao nhat la : {max3}\")"
    ]
   },
   {
@@ -380,7 +552,20 @@
     "a, b = (5, 10)\n",
     "print(a, b)\n",
     "a, b = b, a  # hoán vị\n",
-    "print(a, b)\n"
+    "print(a, b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32d11bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuple1 = (1,3)\n",
+    "# tuple1(1) = 5\n",
+    "print(tuple1)"
    ]
   },
   {
@@ -455,7 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = {1,2,3}; s.discard(4); print(s)"
+    "s = {1,2,3};  print(s.discard(4))"
    ]
   },
   {
@@ -473,7 +658,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = {10,20,30}; print('Removed:', s.pop()); print(s)"
+    "s = {50,49,10,30,30};  print(s)"
    ]
   },
   {
@@ -605,10 +790,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "62472731",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "s = \"Hello World\"\n",
@@ -625,10 +818,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3d3d1b61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "print(s.lower())"
    ]
@@ -643,10 +844,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "de9e275b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD\n"
+     ]
+    }
+   ],
    "source": [
     "print(s.upper())"
    ]
@@ -661,10 +870,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "944f47e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "print(s.title())"
    ]
@@ -679,10 +896,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8fec030b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
    "source": [
     "s2 = '   hi   '; print(s2.strip())"
    ]
@@ -697,10 +922,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "66be443b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Python\n"
+     ]
+    }
+   ],
    "source": [
     "print(s.replace('World','Python'))"
    ]
@@ -715,10 +948,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a39bfc79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', 'World']\n"
+     ]
+    }
+   ],
    "source": [
     "print(s.split())"
    ]
@@ -733,10 +974,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3bc09a5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python-is-fun\n"
+     ]
+    }
+   ],
    "source": [
     "words = ['Python','is','fun']; print('-'.join(words))"
    ]
@@ -751,10 +1000,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f077e238",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "print(s.find('W'))"
    ]
@@ -769,10 +1026,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a1c4eaca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(s.count('l'))"
    ]
@@ -787,12 +1052,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "a21d79f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "print(s.startswith('He'))"
+    "print(s.startswith('H'))"
    ]
   },
   {
@@ -805,10 +1078,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "52b4d43b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(s.endswith('ld'))"
    ]
@@ -823,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "036f447c",
    "metadata": {},
    "outputs": [
@@ -846,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "2ceededd",
    "metadata": {},
    "outputs": [
@@ -872,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "b260abae",
    "metadata": {},
    "outputs": [
@@ -908,18 +1189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "75b6536e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "palindrome = \"madam\"\n",
     "print(palindrome == palindrome[::-1])  # True\n"
@@ -955,12 +1228,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "390da1ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "so ki tu nguyen am la : 3\n",
+      "so ki tu phu am la : 10\n",
+      "oh yah nohtyP\n",
+      "chuoi dao nguoc khong phai la chuoi doi xung\n"
+     ]
+    }
+   ],
    "source": [
-    "#lam bai vao day"
+    "#lam bai vao day\n",
+    "strings = input(\"nhap chuoi ky tu:\")\n",
+    "nguyen_am = \"ueoai\"\n",
+    "strings_na = sum(1 for char in strings if char in nguyen_am)\n",
+    "strings_pa = len(strings) - strings_na\n",
+    "print(f\"so ki tu nguyen am la : {strings_na}\")\n",
+    "print(f\"so ki tu phu am la : {strings_pa}\")\n",
+    "daonguoc = strings[::-1]\n",
+    "print(daonguoc)\n",
+    "if daonguoc == strings:\n",
+    "    print(\"chuoi dao nguoc la chuoi doi xung\")\n",
+    "else:\n",
+    "    print(\"chuoi dao nguoc khong phai la chuoi doi xung\")"
    ]
   },
   {
@@ -986,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6f82d483",
    "metadata": {},
    "outputs": [],
